--- a/utils/test.ipynb
+++ b/utils/test.ipynb
@@ -473,6 +473,60 @@
    "source": [
     "np.linalg.norm([[1, 2, 3], [4, 5, 6]], axis=1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.  , 0.  , 0.36],\n",
+       "       [0.16, 0.25, 0.36]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = np.array([0.2, 0.1])\n",
+    "\n",
+    "(\n",
+    "    (np.array([[1, 2, 3], [4, 5, 6]]) > 2).astype(float)\n",
+    "    * np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "    * a[:, None]\n",
+    ") ** 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2. 0.]\n",
+      " [0. 2.]]\n",
+      "[[ 1. -1.]\n",
+      " [ 1.  1.]]\n",
+      "[[2 0]\n",
+      " [0 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[1, -1], [1, 1]])\n",
+    "print(np.einsum(\"ij,jk,lk->il\", A, np.eye(2), A))\n",
+    "print(np.matmul(A, np.eye(2)))\n",
+    "print(np.matmul(A, A.T))"
+   ]
   }
  ],
  "metadata": {
