[Refactor&Fix] Decouple standalone plastic, modify the implementation of `localProject` method to use LinearProblem directly, change residual evaluate method to fix bug in mpi mode.

--- a/utils/test.ipynb
+++ b/utils/test.ipynb
@@ -527,6 +527,104 @@
     "print(np.matmul(A, np.eye(2)))\n",
     "print(np.matmul(A, A.T))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import dataclasses\n",
+    "\n",
+    "\n",
+    "@dataclasses.dataclass\n",
+    "class Material:\n",
+    "    rho: float\n",
+    "    lame: float\n",
+    "    mu: float\n",
+    "\n",
+    "\n",
+    "@dataclasses.dataclass\n",
+    "class JohnsonCook(Material):\n",
+    "    initial_yield_stress: float\n",
+    "    strength_coefficient: float\n",
+    "    strain_rate_strength_coefficient: float\n",
+    "    hardening_exponent: float\n",
+    "    temperature_exponent: float\n",
+    "    reference_strain_rate: float\n",
+    "    reference_temperature: float\n",
+    "    melting_temperature: float\n",
+    "\n",
+    "\n",
+    "jc1 = JohnsonCook(\n",
+    "    rho=7800,\n",
+    "    lame=110000,\n",
+    "    mu=1,\n",
+    "    initial_yield_stress=500,\n",
+    "    strength_coefficient=600,\n",
+    "    strain_rate_strength_coefficient=0.01,\n",
+    "    hardening_exponent=0.1,\n",
+    "    temperature_exponent=0.02,\n",
+    "    reference_strain_rate=1.0,\n",
+    "    reference_temperature=300,\n",
+    "    melting_temperature=1500,\n",
+    ")\n",
+    "print(jc1.mu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "np.linalg.norm(A, axis=0)=array([5.09901951, 6.32455532, 7.61577311, 8.94427191])\n",
+      "np.linalg.norm(A, axis=1)=array([ 5.47722558, 13.19090596])\n",
+      "np.linalg.norm(A)=np.float64(14.2828568570857)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "A = np.array([[1, 2, 3, 4], [5, 6, 7, 8]])\n",
+    "print(f\"{np.linalg.norm(A, axis=0)=}\")\n",
+    "print(f\"{np.linalg.norm(A, axis=1)=}\")\n",
+    "print(f\"{np.linalg.norm(A)=}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.018)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "A = np.linspace(0, 9e-3, 4)\n",
+    "np.sum(A)\n"
+   ]
   }
  ],
  "metadata": {
