[Feature] Add profile to standalone plastic

--- a/utils/test.ipynb
+++ b/utils/test.ipynb
@@ -625,6 +625,29 @@
     "A = np.linspace(0, 9e-3, 4)\n",
     "np.sum(A)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.23452079 0.33166248 0.40620192 0.46904158 0.52440442 0.57445626\n",
+      " 0.62048368 0.66332496 0.70356236 0.74161985 0.77781746 0.81240384\n",
+      " 0.84557673 0.87749644 0.90829511 0.93808315 0.96695398 0.99498744\n",
+      " 1.02225242 1.04880885]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "increment_num = 20\n",
+    "load_steps = np.linspace(0, 1.1, increment_num + 1)[1:] ** 0.5\n",
+    "print(load_steps)"
+   ]
   }
  ],
  "metadata": {
