[Feature] Reconstructed ductile phase field fracture model

--- a/utils/test.ipynb
+++ b/utils/test.ipynb
@@ -648,6 +648,79 @@
     "load_steps = np.linspace(0, 1.1, increment_num + 1)[1:] ** 0.5\n",
     "print(load_steps)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "load_steps[n]=8.000e-06\n",
+      "getLoad(8.00e-06)=3.1048e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "u_limit = 0.4\n",
+    "end_time = 4e-4\n",
+    "\n",
+    "increment_num = 1000\n",
+    "delta_t = end_time / increment_num\n",
+    "load_steps = np.arange(delta_t, end_time + delta_t / 2, delta_t)\n",
+    "\n",
+    "n = 20\n",
+    "n -= 1\n",
+    "\n",
+    "print(f\"{load_steps[n]=:.3e}\")\n",
+    "\n",
+    "\n",
+    "def getLoad(t):\n",
+    "    def smooth(xi):\n",
+    "        return xi**3 * (10 - 15 * xi + 6 * xi * xi)\n",
+    "\n",
+    "    return u_limit * smooth(t / end_time)\n",
+    "\n",
+    "\n",
+    "print(f\"getLoad({load_steps[n]:.2e})={getLoad(load_steps[n]):.4e}\")\n",
+    "\n",
+    "# total = 0\n",
+    "# for i in range(n):\n",
+    "#     total += getLoad(load_steps[i])\n",
+    "# print(f\"{total=:.3e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8.00e-06 1.60e-05 2.40e-05 3.20e-05 4.00e-05 4.80e-05 5.60e-05 6.40e-05\n",
+      " 7.20e-05 8.00e-05 8.80e-05 9.60e-05 1.04e-04 1.12e-04 1.20e-04 1.28e-04\n",
+      " 1.36e-04 1.44e-04 1.52e-04 1.60e-04 1.68e-04 1.76e-04 1.84e-04 1.92e-04\n",
+      " 2.00e-04]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "u_limit = 0.4\n",
+    "end_time = 4e-4\n",
+    "\n",
+    "increment_num = 50\n",
+    "delta_t = end_time / increment_num\n",
+    "load_steps = np.arange(delta_t, end_time + delta_t / 2, delta_t)[0 : int(increment_num / 2)]\n",
+    "print(load_steps)\n"
+   ]
   }
  ],
  "metadata": {
