[Feature&Fix] Polish key feature and test the necessity of `localProject` for its low efficiency and high memory usage

--- a/utils/test.ipynb
+++ b/utils/test.ipynb
@@ -721,6 +721,52 @@
     "load_steps = np.arange(delta_t, end_time + delta_t / 2, delta_t)[0 : int(increment_num / 2)]\n",
     "print(load_steps)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 2.]\n",
+      " [3. 4.]\n",
+      " [5. 6.]\n",
+      " [7. 8.]]\n",
+      "\n",
+      "[[[1. 0.]\n",
+      "  [0. 1.]]\n",
+      "\n",
+      " [[1. 0.]\n",
+      "  [0. 1.]]\n",
+      "\n",
+      " [[1. 0.]\n",
+      "  [0. 1.]]\n",
+      "\n",
+      " [[1. 0.]\n",
+      "  [0. 1.]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "A = np.array([[1, 2], [3, 4], [5, 6], [7, 8]], dtype=np.float64)\n",
+    "\n",
+    "# Create the block matrix\n",
+    "M = np.zeros((A.shape[0], 2, 2))\n",
+    "M[:, 0, 0] = A[:, 0]\n",
+    "M[:, 1, 1] = A[:, 1]\n",
+    "\n",
+    "w, v = np.linalg.eig(M)\n",
+    "\n",
+    "print(w)\n",
+    "print()\n",
+    "print(v)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
