[Enhancement] Add timer utility and improve logging in shear reconstruction

--- a/utils/test.ipynb
+++ b/utils/test.ipynb
@@ -767,6 +767,31 @@
     "print(v)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time.struct_time(tm_year=2024, tm_mon=12, tm_mday=8, tm_hour=13, tm_min=23, tm_sec=2, tm_wday=6, tm_yday=343, tm_isdst=0)\n",
+      "[2024-12-08 13:23:02]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "# print(time.struct_time([]))\n",
+    "print(time.localtime())\n",
+    "\n",
+    "date_time = time.localtime()\n",
+    "# Print time like the log\n",
+    "print(time.strftime(\"[%Y-%m-%d %H:%M:%S]\", date_time))"
+   ]
   }
  ],
  "metadata": {
