[Refactor&Feature] Clean up commented code and improve some structures in Problem and Constitutive classes. Save mesh and re-read

--- a/utils/test.ipynb
+++ b/utils/test.ipynb
@@ -15,7 +15,7 @@
    ],
    "source": [
     "# For default Johnson-Cook material model\n",
-    "E = 110000  # 1.1e8\n",
+    "E = 1.1e5  # 1.1e8\n",
     "nu = 0.31  # 0.3\n",
     "\n",
     "\n",
@@ -350,7 +350,7 @@
    "source": [
     "import gmsh\n",
     "\n",
-    "w = 10\n",
+    "principle_direction = 10\n",
     "h = 4\n",
     "mesh_x = 400\n",
     "crack_length = 4\n",
@@ -358,15 +358,15 @@
     "\n",
     "gmsh.initialize()\n",
     "# Define the geometry\n",
-    "h_e = w / mesh_x\n",
+    "h_e = principle_direction / mesh_x\n",
     "# crack_length_factor = crack_length / length\n",
     "width = h_e * 0.5\n",
     "max_element_size = h_e\n",
     "min_element_size = h_e\n",
-    "gmsh.model.occ.addPoint(-w / 2, -h / 2, 0, max_element_size, 1)\n",
-    "gmsh.model.occ.addPoint(w / 2, -h / 2, 0, max_element_size, 2)\n",
-    "gmsh.model.occ.addPoint(w / 2, h / 2, 0, max_element_size, 3)\n",
-    "gmsh.model.occ.addPoint(-w / 2, h / 2, 0, max_element_size, 4)\n",
+    "gmsh.model.occ.addPoint(-principle_direction / 2, -h / 2, 0, max_element_size, 1)\n",
+    "gmsh.model.occ.addPoint(principle_direction / 2, -h / 2, 0, max_element_size, 2)\n",
+    "gmsh.model.occ.addPoint(principle_direction / 2, h / 2, 0, max_element_size, 3)\n",
+    "gmsh.model.occ.addPoint(-principle_direction / 2, h / 2, 0, max_element_size, 4)\n",
     "\n",
     "gmsh.model.occ.addPoint(-crack_length / 2, width / 2, 0, min_element_size, 5)\n",
     "gmsh.model.occ.addPoint(crack_length / 2, width / 2, 0, min_element_size, 6)\n",
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -760,11 +760,11 @@
     "M[:, 0, 0] = A[:, 0]\n",
     "M[:, 1, 1] = A[:, 1]\n",
     "\n",
-    "w, v = np.linalg.eig(M)\n",
+    "principle_direction, principle_strain = np.linalg.eig(M)\n",
     "\n",
-    "print(w)\n",
+    "print(principle_direction)\n",
     "print()\n",
-    "print(v)\n",
+    "print(principle_strain)\n",
     "\n"
    ]
   },
@@ -791,6 +791,89 @@
     "date_time = time.localtime()\n",
     "# Print time like the log\n",
     "print(time.strftime(\"[%Y-%m-%d %H:%M:%S]\", date_time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "principle_strain = \n",
+      "[ 0.03927621 -0.00709243  0.0171373 ]\n",
+      "\n",
+      "principle_direction = \n",
+      "[[ 0.82002045 -0.57233422  0.        ]\n",
+      " [ 0.57233422  0.82002045  0.        ]\n",
+      " [ 0.          0.          1.        ]]\n",
+      "\n",
+      "principle_stress = \n",
+      "[6467.47135292 2677.20676161 4666.69802001]\n",
+      "\n",
+      "stress = \n",
+      "[[5225.90782205 1778.86882252    0.        ]\n",
+      " [1778.86882252 3918.77029249    0.        ]\n",
+      " [   0.            0.         4666.69802001]]\n",
+      "\n",
+      "deviatoric_stress = \n",
+      "[[ 622.1157772  1778.86882252    0.        ]\n",
+      " [1778.86882252 -685.02175236    0.        ]\n",
+      " [   0.            0.           62.90597517]]\n",
+      "\n",
+      "equivalent_stress = \n",
+      "3283.8213818580048\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "lame = 68501.40618722378\n",
+    "mu = 41984.732824427476\n",
+    "\n",
+    "d = 0.0157834\n",
+    "E = np.array(\n",
+    "    [[0.0240874, 0.021762, 0.0], [0.021762, 0.00809638, 0.0], [0.0, 0.0, 0.0171373]]\n",
+    ")\n",
+    "\n",
+    "principle_strain, principle_direction = np.linalg.eig(E)\n",
+    "\n",
+    "# sorted_idx = np.argsort(principle_strain)[-1::-1]\n",
+    "# principle_strain = principle_strain[sorted_idx]\n",
+    "# principle_direction =  principle_direction[sorted_idx, :]\n",
+    "\n",
+    "print(\"principle_strain = \")\n",
+    "print(principle_strain)\n",
+    "print(\"\\nprinciple_direction = \")\n",
+    "print(principle_direction)\n",
+    "\n",
+    "\n",
+    "tr = np.sum(principle_strain)\n",
+    "tr_factor = (tr > 0).astype(float)\n",
+    "factor = (principle_strain > 0).astype(float)\n",
+    "principle_stress = (\n",
+    "    2 * mu * principle_strain * (1 - factor * d) ** 2\n",
+    "    + lame * tr * (1 - tr_factor * d) ** 2\n",
+    ")\n",
+    "print(\"\\nprinciple_stress = \")\n",
+    "print(principle_stress)\n",
+    "\n",
+    "stress = np.einsum(\n",
+    "    \"ij,jk,lk->il\", principle_direction, np.diag(principle_stress), principle_direction\n",
+    ")\n",
+    "print(\"\\nstress = \")\n",
+    "print(stress)\n",
+    "\n",
+    "deviatoric_stress = stress - np.sum(np.diag(stress)) / 3 * np.eye(3)\n",
+    "print(\"\\ndeviatoric_stress = \")\n",
+    "print(deviatoric_stress)\n",
+    "\n",
+    "equivalent_stress = np.sqrt(1.5 * np.sum(deviatoric_stress**2))\n",
+    "print(\"\\nequivalent_stress = \")\n",
+    "print(equivalent_stress)"
    ]
   }
  ],
