--- a/utils/test.ipynb
+++ b/utils/test.ipynb
@@ -875,6 +875,46 @@
     "print(\"\\nequivalent_stress = \")\n",
     "print(equivalent_stress)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0. 0.]\n",
+      "  [0. 0.]]\n",
+      "\n",
+      " [[0. 0.]\n",
+      "  [0. 0.]]\n",
+      "\n",
+      " [[0. 0.]\n",
+      "  [0. 0.]]]\n",
+      "[[[1. 0.]\n",
+      "  [0. 0.]]\n",
+      "\n",
+      " [[5. 0.]\n",
+      "  [0. 0.]]\n",
+      "\n",
+      " [[9. 0.]\n",
+      "  [0. 0.]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "data = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12])\n",
+    "\n",
+    "M = np.zeros((3, 2, 2))\n",
+    "print(M)\n",
+    "M[:,0,0] = data[0::4]\n",
+    "\n",
+    "print(M)"
+   ]
   }
  ],
  "metadata": {
